[project]
name = "billingv3"
version = "0.2.0"
description = "Simple billing desktop app with CustomTkinter"
requires-python = ">=3.11"
dependencies = [
  "customtkinter>=5.2.2",
  "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
billingv3 = "billing.gui:run_app"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
